
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-01-25 DP  1.6.0  Prevent deletion of the blank item in config editors, and
                      ensure undo will only work on the appropriate line.
2006-01-25 MH  1.6.0  Add a password file editor,
2006-01-23 MH  1.4.2  Read config files in the local encoding scheme
2006-01-22 DP  1.6.0  Rename text docs to match GNUish standards, remove all
                      HTML markup and wrap at col 80.
2006-01-19 DP  1.6.0  Fix capitalisation of menu items. Add '...' to the end of
                      items that open dialogues [Peter Eisentraut]
2006-01-19 MH  1.6.0  Display the client start time on the status dialogue with
                      PostgreSQL 8.1+
2006-01-17 DP  1.6.0  Allow set returning functions to be created.
2006-01-17 DP  1.4.2  Display the definition of set returning procedures 
                      correctly.
2006-01-17 DP  1.4.2  Fix drop procedure by including IN/OUT parameter flags in 
                      the name.
2006-01-13 DP  1.4.2  Fix role SQL - correctly define CREATEROLE/NOCREATEROLE 
                      per Andrus.
2006-01-11 MH  1.6.0  Allow result copy quoting configuration to be set 
                      explicitly rather than using the result export settings 
2006-01-09 MH  1.6.0  Add -a and -q command line options to auto connect to a 
                      server and open a query window respectively
2006-01-09 MH  1.4.2  Honour the copy quoting setting properly in the SQL 
                      results pane
2006-01-09 MH  1.6.0  Use Ctrl-A to select all results in the query results 
                      pane.
2006-01-09 MH  1.4.2  Set the initial Unicode/Local charset options correctly 