@@ -35,6 +35,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-01-27 DP  1.6.0  Allow the number of rows shown in the Edit Grid to be 
+                      limited and add a 'View top 100 rows' option to the
+                      table/view context menus. [Magnus Hagander, Dave Page]
 2006-01-25 DP  1.6.0  Prevent deletion of the blank item in config editors, and
                       ensure undo will only work on the appropriate line.
 2006-01-25 MH  1.6.0  Add a password file editor,
